Update build system